--- a/snapchaos-socket/package.json
+++ b/snapchaos-socket/package.json
@@ -2,14 +2,13 @@
   "name": "snapchaos-socket",
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "nanoid": "^4.0.2",
-    "socket.io": "^4.7.5",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "cors": "^2.8.5"
+    "socket.io": "^4.7.5"
   }
 }
